Keep all the bugs index.js and some of the swagger improvements.
Comment out the use of the openapi spec since the code doesn't match the spec and it's part of the exercise to discover that and decide what to do about it.
